添加微信登录，用sessionKey解密数据，获取手机号码等操作

--- a/demo-miniprogram-one/src/main/resources/application.yml
+++ b/demo-miniprogram-one/src/main/resources/application.yml
@@ -34,9 +34,6 @@ management:
     health:
       show-details: ALWAYS
 
-dubbo:
-  version: 1.0.0
-
-admin:
-  user:
-    id: 1
+wechat:
+  url:
+    getUserInfo: https://api.weixin.qq.com/sns/jscode2session
